# soltrace

./: .dockerignore  .env.example  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  soltrace.db
.github/workflows/: build-docker-image.yaml  main.yaml  test.yaml
docs/: BACKFILL_REFACTOR.md  DOCKER.md  DOCKER_SETUP.md  IDL_EXAMPLE.md  LIVE_REFACTOR.md  PUBSUB_CLIENT.md  PUBSUB_MIGRATION.md  README.md  REFACTORING_SUMMARY.md  TECHNICAL.md
examples/tributary/: env
examples/tributary/idls/: tributary.json
soltrace-backfill/: Cargo.toml
soltrace-backfill/src/: main.rs
soltrace-core/: Cargo.toml
soltrace-core/src/: borsh_decoder.rs  db.rs  error.rs  event.rs  idl.rs  idl_event.rs  lib.rs  metrics.rs  retry.rs  types.rs  utils.rs  validation.rs
soltrace-core/src/db/: factory.rs  mod.rs  mongodb.rs  postgres.rs  sqlite.rs
soltrace-core/src/queue/: kafka.rs  mod.rs
soltrace-live/: Cargo.toml
soltrace-live/src/: main.rs
