[workspace]
members = ["soltrace-core", "soltrace-live", "soltrace-backfill"]
resolver = "2"

[workspace.dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
solana-account-decoder = "1.18"
solana-transaction-status = "1.18"
anchor-lang = "0.31.1"
anchor-client = "0.31.1"
borsh = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
hex = "0.4"
base64 = "0.22"
