[package]
name = "soltrace-backfill"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "soltrace-backfill"
path = "src/main.rs"

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-commitment-config = "3.1"
solana-sdk-ids = "3.1"
soltrace-core = { path = "../soltrace-core" }
tokio = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { version = "4.0", features = ["derive", "env"] }
base64 = { workspace = true }
dotenv = "0.15"
futures = { workspace = true }
