[package]
name = "soltrace-core"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
solana-transaction-status = { workspace = true }
anchor-lang = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = "0.4"
tokio = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
