[package]
name = "soltrace-live"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "soltrace-live"
path = "src/main.rs"

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
soltrace-core = { path = "../soltrace-core" }
tokio = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
