[package]
name = "soltrace-live"
version = "0.1.0"
edition = "2021"

[features]
default = []
kafka = ["soltrace-core/kafka"]

[[bin]]
name = "soltrace-live"
path = "src/main.rs"

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-pubsub-client = "3.1"
solana-transaction-status = { workspace = true }
solana-commitment-config = "3.1"
solana-sdk-ids = "3.1"
soltrace-core = { path = "../soltrace-core" }
tokio = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { version = "4.0", features = ["derive", "env"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dotenv = "0.15"
